sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: not found: value getNombresValeurs
    for(i<- 0 to getNombresValeurs()-2){
                 ^AlgCocktailSort1:12: error: not found: value getNombresValeurs
    for(j<- getNombresValeurs()-2 to 0){
            ^